feat: implement multi-tenant social feed, advanced RBAC, and robust shift management
- feat(feed): added contextual targeted announcements (Global/Org/Event/WorkArea)
- feat(feed): integrated rich text, multi-image upload, nested comments, and reactions
- feat(rbac): implemented dynamic, context-aware role resolution (SysAdmin, Org Leader, Event Organizer, Coordinator)
- fix(db): resolved Hibernate Foreign Key constraint errors with recursive orphan removal for comments
- fix(events): excluded personal commitments from event timeframe conflict validation
- fix(ui): corrected React Router navigation history logic upon event form submission
- refactor: integrated tenant-aware database queries for accurate relationship mapping